# meroxa-py

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox-generated.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge-py.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pull-request.yml  release.yml
meroxa-py/: client.py  resources.py  users.py
requirements/: requirements-dev.txt  requirements.txt
src/meroxa/: __init__.py  applications.py  client.py  connectors.py  constants.py  functions.py  pipelines.py  resources.py  types.py  users.py  utils.py
tests/: __init__.py  test_applications.py  test_connectors.py  test_functions.py  test_resources.py  test_users.py
