[metadata]
name = meroxa-py
version = attr: meroxa.__version__
url = https://meroxa.io/
project_urls =
    Source Code = https://github.com/meroxa/meroxa-py/
    Issue Tracker = https://github.com/meroxa/meroxa-py/issues
author = Eric Cheatham
author_email = eric@meroxa.io
description = Meroxa Platform API Python client
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.md
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >=3.9

install_requires =
    aiohttp

[options.packages.find]
where = src

[semantic_release]
version_variable = src/meroxa/__init__.py:__version__
version_source = tags
branch = main
changelog_file = CHANGELOG.md
# let semantic release manage PyPI uploads
upload_to_repository = true
# create a GH release note and upload artifacts
upload_to_release = true
build_command = pip install build --user && python -m build
